Fix box-sizing, font alignement and responsive size

--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,10 @@
     width: 100%;
     border-radius: 5px;
     box-shadow: 8px 8px inset var(--shadow-dark), -8px -8px inset var(--shadow-light);
+    padding: 9px;
+    text-align: right;
+    align-content: center;
+    font-size: calc(15px + 2vw);
 }
 
 /* BUTTONS */
@@ -32,6 +36,7 @@ button {
     border: none;
     border-radius: 5px;
     box-shadow: 4px 4px inset var(--shadow-light), -4px -4px inset var(--shadow-dark);
+    font-size: calc(15px + 1vw);
 }
 
 button:active {
